- consistency checks/refactorings - DB can now be created from DOM instances (DOCWrapper), Streams, ... - Filter added for creating DB collections